@@ -1,5 +1,12 @@
 2013-07-08  Tobias Burnus  <burnus@net-b.de>
 
+	PR fortran/57785
+	* simplify.c (compute_dot_product): Complex conjugate for
+	dot_product.
+	(gfc_simplify_dot_product, gfc_simplify_matmul): Update call.
+
+2013-07-08  Tobias Burnus  <burnus@net-b.de>
+
 	PR fortran/57469
 	* trans-decl.c (generate_local_decl): Don't warn that
 	a dummy is unused, when it is in a namelist.
